--- a/src/app/components/affection-message/affection-message.component.scss
+++ b/src/app/components/affection-message/affection-message.component.scss
@@ -1,13 +1,71 @@
+#background {
+  background-color: #FEFAE0;
+  height: 100%;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: 5;
+}
+
 section {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  position: absolute;
-  min-width: 500px;
-  max-width: 1200px;
-  border: 0.2px solid #ccc;
+  position: relative;
+  width: 660px;
+  border: 1px solid #CCD5AE;
   border-radius: 8px;
-  padding: 20px;
+  padding: 20px 20px 0 20px;
+  background-color: #E9EDC9;
+  box-shadow: 0 0.8px 3px 0 rgba(0, 0, 0, 0.2);
+  z-index: 10;
+
+  .comments {
+    width: 560px;
+    height: 205px;
+    overflow-y: scroll;
+    background-color: #FEFAE0;
+    margin: 0 auto;
+    margin-bottom: 0;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+
+    .block-to-draw-line {
+      text-align: start;
+      border-bottom: 1px solid #D4A373;
+      padding: 5px 20px;
+      width: 70%;
+      position: relative;
+      margin: 0 auto;
+      display: flex;
+      align-items: baseline;
+
+      p {
+        margin-left: 10px;
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 0.9em;
+      }
+    }
+  }
+
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    width: 100%;
+
+    .custom-form-field {
+      width: 100%;
+      background-color: #FEFAE0;
+    }
+
+    button {
+      background: #CCD5AE;
+      height: 54px;
+    }
+  }
 
   article.background {
     display: flex;
@@ -35,10 +93,54 @@ section {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-bottom: 30px;
 
-        img {
-          width: 150px;
-          border-radius: 8px;
+        .polaroid {
+          width: 330px;
+          height: 300px;
+          background-color: #fff;
+          padding: 15px;
+          border-radius: 5px;
+          box-shadow: 0 1.5px 3px 1px rgba(0, 0, 0, 0.2);
+
+          .polaroid-img-block {
+            width: 100%;
+            height: 260px;
+            border-radius: 5px;
+            overflow: hidden;
+
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              object-position: center;
+            }
+          }
+        }
+
+        .footer {
+          display: flex;
+          flex-direction: column;
+
+          .action-buttons {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+
+            .buttons {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              width: 25%;
+              position: relative;
+
+              a {
+                background: transparent;
+                cursor: pointer;
+              }
+            }
+          }
         }
       }
     }
