deixando a home sexy

--- a/src/app/components/affection-message/affection-message.component.scss
+++ b/src/app/components/affection-message/affection-message.component.scss
@@ -64,6 +64,7 @@ section {
     button {
       background: #CCD5AE;
       height: 54px;
+      margin-left: 10px;
     }
   }
 
@@ -196,4 +197,3 @@ section {
     }
   }
 }
-
